--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,6 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteRule (.*)$ index.php?route=$1 [L]
+Options -indexes
